<resources>
  <string name="app_name">SmartAlarmClock</string>
  <string name="receiver_boot">Boot completed</string>
  <string name="action_settings">Settings</string>
  <string name="permission_music">Need permission to read storage</string>
  <string name="main_create_alarm">Create alarm</string>
  <string name="edit_ok">Save</string>
  <string name="edit_cancel">Cancel</string>
  <string name="edit_colon">:</string>
  <string name="edit_time_left">Left: %1$s</string>
  <string name="edit_choose_music">Choose music</string>
  <string name="edit_choose_ringtone">Choose ringtone</string>
  <string name="edit_delete_alarm">Delete alarm</string>
  <string name="trigger_turn_off">Turn off</string>
  <string name="trigger_time">%1$02d : %2$02d</string>
  <string name="music_time_format">%d : %02d</string>
  <string name="date_time_format_long"
      translatable="false">dd.MM.yyyy\'T\'HH:mm:ss</string>
  <string name="notification_title">Alarm is triggered</string>
  <string name="notification_content">Tap to open an alarm screen</string>
  <!--TODO change locale-->
  <string name="lang"
      translatable="false">RU</string>

</resources>
