<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:fitsSystemWindows="true"
    >
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/main_background"
      >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <Button
          android:id="@+id/btnCancel"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="@drawable/background_button"
          android:text="@string/edit_cancel"
          app:layout_constraintEnd_toStartOf="@id/btnCreateAlarm"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <Button
          android:id="@+id/btnCreateAlarm"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="@drawable/background_button"
          android:text="@string/edit_ok"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/btnCancel"
          app:layout_constraintTop_toTopOf="parent"
          />

      <android.support.constraint.Barrier
          android:id="@+id/topBarrier"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:barrierDirection="bottom"
          app:constraint_referenced_ids="btnCreateAlarm, btnCancel"
          />

      <TimePicker
          android:id="@+id/timePicker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:timePickerMode="spinner"
          app:layout_constraintTop_toBottomOf="@+id/topBarrier"
          tools:layout_constraintTop_toBottomOf="@+id/btnCreateAlarm"
          />

      <Button
          android:id="@+id/btnChooseRingtone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/background_button"
          android:padding="15dp"
          android:text="@string/edit_choose_ringtone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/timePicker"
          />

      <Button
          android:id="@+id/btnChooseMusic"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/background_button"
          android:padding="15dp"
          android:text="@string/edit_choose_music"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btnChooseRingtone"
          />

      <Button
          android:id="@+id/btnDeleteAlarm"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/background_button"
          android:padding="15dp"
          android:text="@string/edit_delete_alarm"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btnChooseMusic"
          />

      <TextView
          android:id="@+id/tvMusicTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btnChooseMusic"
          />
    </android.support.constraint.ConstraintLayout>
  </ScrollView>
</android.support.design.widget.CoordinatorLayout>